name:                 moORBen
version:              0.1.0.0
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             
author:               monnef
maintainer:           not@s.et
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable moORBen
  main-is:              Main.hs
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5
                      , moORBen -any
                      , flow == 1.0.*
  hs-source-dirs:       app
  default-language:     Haskell2010

library
  hs-source-dirs:       src
  exposed-modules:      Parser.MoorbenParser
                      , Runtime.MoorbenInterpreter
                      , Runtime.Data.Position
                      , Runtime.Position
                      , Runtime.Data.Velocity
                      , Runtime.Velocity
                      , Runtime.Data.BallState
                      , Runtime.BallState
                      , Runtime.Data.RuntimeState
                      , Runtime.RuntimeState
                      , Runtime.Data.RuntimeOptions
                      , Runtime.RuntimeOptions
  build-depends:        base
                      , parsec
                      , flow == 1.0.*
                      , lens == 4.*
                      , mtl == 2.*
  default-language:     Haskell2010

test-suite moORBen-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  build-depends:        base
                      , moORBen -any
                      , HUnit
                      , containers == 0.5.*
                      , HTF == 0.13.*
                      , parsec
                      , flow == 1.0.*
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010
